Fix z-index Sidebar

--- a/src/Components/SideBar/SideBar.css
+++ b/src/Components/SideBar/SideBar.css
@@ -17,9 +17,4 @@
 
 .sideBar-item-icon {
     color: white;
-
-}
-.css-x15wq9{
-    position: relative;
-    z-index: 5;
 }
